Fix browser display issues
- Fixed snowflake rotation (now slow and smooth)
- Removed blue background from HTML (now pure black)
- Made canvas adaptive to browser window size
- Added pygame.RESIZABLE flag for better display
- Improved loading screen with proper styling
- Fixed snowflake rendering (simple 4-pointed stars instead of random polygons)

--- a/index.html
+++ b/index.html
@@ -3,84 +3,150 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Моя Перша Гра - Pygame</title>
+    <title>Cornered - Моя Перша Гра</title>
     <style>
-        body {
+        * {
             margin: 0;
             padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
             background: #000;
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
             min-height: 100vh;
-            font-family: 'Verdana', sans-serif;
+            font-family: 'Verdana', 'Arial', sans-serif;
             color: #A6F060;
+            overflow: hidden;
         }
 
         h1 {
-            margin: 20px 0;
+            margin: 15px 0;
             text-align: center;
-            font-size: 2em;
+            font-size: 2.5em;
+            text-shadow: 0 0 10px rgba(166, 240, 96, 0.5);
         }
 
         .game-container {
+            position: relative;
             border: 3px solid #A6F060;
             border-radius: 10px;
             overflow: hidden;
-            box-shadow: 0 0 20px rgba(166, 240, 96, 0.5);
-        }
-
-        .instructions {
-            max-width: 800px;
-            margin: 20px;
-            padding: 20px;
-            background: #111;
-            border: 2px solid #A6F060;
-            border-radius: 10px;
-            text-align: center;
-        }
-
-        .instructions h2 {
-            margin-top: 0;
-            color: #E86421;
-        }
-
-        .instructions p {
-            margin: 10px 0;
-            line-height: 1.6;
+            box-shadow: 0 0 30px rgba(166, 240, 96, 0.3);
+            background: #000;
+            max-width: 95vw;
+            max-height: 80vh;
         }
 
         canvas {
             display: block;
+            background: #000 !important;
+            image-rendering: pixelated;
+            image-rendering: crisp-edges;
         }
 
-        #output {
-            color: #fff;
-            margin: 10px;
+        .instructions {
+            position: fixed;
+            bottom: 10px;
+            left: 50%;
+            transform: translateX(-50%);
+            background: rgba(0, 0, 0, 0.9);
+            padding: 10px 20px;
+            border: 2px solid #A6F060;
+            border-radius: 8px;
+            text-align: center;
+            font-size: 0.9em;
+            z-index: 1000;
+        }
+
+        .instructions p {
+            margin: 3px 0;
+        }
+
+        .loading {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            font-size: 1.5em;
+            color: #A6F060;
+            text-shadow: 0 0 10px rgba(166, 240, 96, 0.5);
+            z-index: 999;
+        }
+
+        @media (max-width: 768px) {
+            h1 {
+                font-size: 1.5em;
+            }
+            .game-container {
+                width: 100vw;
+                border: none;
+            }
+            .instructions {
+                font-size: 0.7em;
+                padding: 5px 10px;
+            }
         }
     </style>
 </head>
 <body>
-    <h1>🎮 Моя Перша Гра</h1>
+    <h1>🎮 CORNERED</h1>
 
-    <div class="instructions">
-        <h2>Як грати:</h2>
-        <p>⬆️ ⬇️ ⬅️ ➡️ - Керування стрілками</p>
-        <p>🟩 Зелений квадрат - це ти!</p>
-        <p>🟧 Оранжеві квадрати - вороги (-1 бал)</p>
-        <p>🔺 Різнокольорові трикутники - бонуси (+1 бал)</p>
-        <p>🔶 Червоні ромби - збільшують тебе</p>
-        <p>⬡ Білі шестикутники - запускають сніг</p>
-        <p>⬢ Зелені шестикутники - зупиняють сніг (+3 бали)</p>
-    </div>
-
-    <div class="game-container">
+    <div class="game-container" id="gameContainer">
+        <div class="loading" id="loading">Завантаження гри...</div>
         <canvas id="canvas" width="1200" height="800"></canvas>
     </div>
 
-    <div id="output"></div>
+    <div class="instructions">
+        <p>⬆️⬇️⬅️➡️ Керування | 🟩 Ти | 🟧 Вороги (-1) | 🔺 Бонуси (+1) | 🔶 Ромби (збільшують) | ⬡ Сніг | ⬢ Зупинка снігу (+3)</p>
+    </div>
 
-    <script src="main.py" type="application/python"></script>
+    <script>
+        // Hide loading indicator when game starts
+        window.addEventListener('load', function() {
+            setTimeout(function() {
+                const loading = document.getElementById('loading');
+                if (loading) {
+                    loading.style.display = 'none';
+                }
+            }, 2000);
+        });
+
+        // Adaptive canvas size
+        function resizeCanvas() {
+            const container = document.getElementById('gameContainer');
+            const canvas = document.getElementById('canvas');
+            if (canvas && container) {
+                const maxWidth = window.innerWidth * 0.95;
+                const maxHeight = window.innerHeight * 0.8;
+                const aspectRatio = 1200 / 800;
+
+                let width = 1200;
+                let height = 800;
+
+                if (width > maxWidth) {
+                    width = maxWidth;
+                    height = width / aspectRatio;
+                }
+
+                if (height > maxHeight) {
+                    height = maxHeight;
+                    width = height * aspectRatio;
+                }
+
+                container.style.width = width + 'px';
+                container.style.height = height + 'px';
+            }
+        }
+
+        window.addEventListener('resize', resizeCanvas);
+        window.addEventListener('load', resizeCanvas);
+        resizeCanvas();
+    </script>
+
+    <script src="main.py" type="application/python" async defer></script>
 </body>
 </html>
